--- a/simple_shopping_cart/css/custom.css
+++ b/simple_shopping_cart/css/custom.css
@@ -2,7 +2,7 @@ tbody > tr > td {
    width: 80px;
 }
 body {
-    background-image: url("C:\\Users\\ethal\\Downloads\\DALL·E 2024-09-04 15.06.55 - An abstract background image with vertical gradient lines in shades of purple, blue, and teal. The lines should be varying in thickness, stretching fr.webp");
+    background-image: url("../img/shopping-background.webp");
 }
 .row {
     background-color: aliceblue;
